gccida/g2/is_zeros_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/is_zeros_p/src/expr.c:4733:17: error: expected expression
v6 = *( _OWORD *)dconst0.r != *( _OWORD *)&exp->block.vars || exp->real_cst.real_cst.r[2] != dconst0.r[2]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/is_zeros_p/src/expr.c:4733:9: error: use of undeclared identifier '_OWORD'
v6 = *( _OWORD *)dconst0.r != *( _OWORD *)&exp->block.vars || exp->real_cst.real_cst.r[2] != dconst0.r[2]; 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/is_zeros_p/src/obj/expr.o] Error 1
